remove `white-space: nowrap` from external links, fixes #16

--- a/src/sass/components/_icons.scss
+++ b/src/sass/components/_icons.scss
@@ -766,7 +766,6 @@ $icon-danger-hover-color:            darken($brand-danger, 10%);
     div.wiki {
         .external {
             @extend %fa-icon;
-            white-space: nowrap;
 
             &:before {
                 margin-right: 3px;
